[package]
name = "demo_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-token-metadata = "4.1.1"
solana-sdk = "1.18.2"
solana-client = "1.18.2"
metaplex = "0.0.1"


[registries]
crates-io = "https://crates.io"

